--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -11,11 +11,9 @@
   gap: 0.3rem 0.2rem;
   position: relative;
   margin-top:1rem;
-  padding:0rem 0rem 0.2rem 0rem;
+  padding:1rem;
   z-index:3;  
-  border:1px solid #e6e6e6;
-  border-bottom:none;
-  border-radius:1.5rem 1.5rem 0 0;
+  border-radius:1.5rem;
   overflow:hidden;
   background-color:#fff;
 }
