--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -10,8 +10,8 @@
   align-items: center;
   gap: 0.3rem 0.2rem;
   position: relative;
-  margin-top:1rem;
-  padding:1rem;
+  margin-top:1.5rem;
+  padding:0.5rem;
   z-index:3;  
   border-radius:1.5rem;
   overflow:hidden;
@@ -26,7 +26,7 @@
   flex-shrink:0;
   font-weight:bold;
   padding:1rem 0.5rem 0.5rem 1rem;
-  border:1px solid #e6e6e6;
+  border:1px solid red;
   border-right:none;
   border-bottom:none;
   border-top-left-radius: 1.5rem;
@@ -44,7 +44,7 @@
   -ms-overflow-style:none;
   scrollbar-width:none;
   padding:1rem 0 0.5rem 0;
-  border:1px solid #e6e6e6;
+  border:1px solid green;
   border-left:none;
   border-bottom:none;
   border-top-right-radius: 1.5rem;
@@ -74,6 +74,7 @@
   color: #b3b3b3;
   box-sizing: border-box;
   border-radius:50%;
+  border:1px solid purple;
 }
 
 #main_body .date_scroll .date_group i,
