--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -18,6 +18,7 @@
   background-color:#fff;
 }
 
+/*
 #main_body .date_scroll .date_fixed_today {
   grid-area: today;
   position: sticky;
@@ -30,7 +31,7 @@
   border-top-left-radius: 1.5rem;
   background-color:red;
 }
-
+*/
 #main_body .date_scroll .date_group {
   grid-area: group;
   display:flex;
