--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -39,12 +39,7 @@
   -ms-overflow-style:none;
   scrollbar-width:none;
   padding:1rem 0 0.5rem 0;
-  border:1px solid green;
-  border-left:none;
-  border-bottom:none;
-  border-top-right-radius: 1.5rem;
   margin-right:1rem;
-  background-color:Red;
 }
 
 #main_body .date_scroll .date_group::-webkit-scrollbar { 
@@ -69,8 +64,7 @@
   font-size: 1rem;
   color: #b3b3b3;
   box-sizing: border-box;
-  border-radius:50%;
-  border:1px solid purple;
+  border-radius:1.5rem;
 }
 
 #main_body .date_scroll .date_group i,
@@ -92,7 +86,8 @@
 #main_body .date_fixed_today span.on.on {
   color:#fff!important;
   font-weight:bold!important;
-  border:none!important
+  border:none!important;
+  background-color:#3db4ff!important
 }
 
 #main_body .routine_total {
