--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,22 +1,43 @@
+
 @font-face {
-    font-family: 'ONE-Mobile-POP';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/ONE-Mobile-POP.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'Paperlogy';
+  src: url('../fonts/Paperlogy-8ExtraBold.woff2') format('woff2');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url('../fonts/Pretendard-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'Freesentation-7Bold';
-  src: url('../fonts/Freesentation-7Bold.woff2') format('woff2');
+  font-family: 'Pretendard';
+  src: url('../fonts/Pretendard-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'SUIT-Regular';
-    src: url('../fonts/SUIT-Regular.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'Pretendard';
+  src: url('../fonts/Pretendard-ExtraBold.woff2') format('woff2');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url('../fonts/Pretendard-Black.woff2') format('woff2');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -47,16 +68,6 @@
    font-style: normal;
 }
 
-
-@font-face {
-  font-family: 'Paperlogy';
-  src: url('../fonts/Paperlogy-8ExtraBold.woff2') format('woff2');
-  font-weight: 800;
-  font-style: normal;
-  font-display: swap;
-}
-
-
 * {
   margin: 0;
   padding: 0;
@@ -80,7 +91,7 @@ body,
   overscroll-behavior: none;
   overflow: hidden;
   touch-action: none;
-  background-color:#f9f9f9;
+  background-color:#f9f9f9
 }
 
 @media (max-width: 375px) {
@@ -138,9 +149,10 @@ body,
 }
 
 h1 {
-  font-family: 'Paperlogy';
+  font-family: 'Pretendard';
   font-size:3.8rem;
   line-height:4.3rem;
+  font-weight:900;
 }
 
 h2 {
