--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height:5rem;
+  height:7rem;
   padding:1.5rem;
   box-sizing: border-box;
 }
@@ -43,12 +43,12 @@
 }
 
 #header .left .ruffys {
-  width: 3.5rem;
-  height: 3.5rem;
-  background-color: #ffef6e;
+  width: 4rem;
+  height:4.5rem;
+  background: url('../images/h1_say_bg.png') no-repeat 0 0/100%;
   border-radius: 1rem;
   flex-shrink: 0;
-  margin-right: 1rem;
+  margin-right: 0.8rem;
   position: relative;
   display: flex;
   align-items: center;
@@ -56,34 +56,38 @@
 }
 
 #header .left .ruffys img {
-  width: 80%;
-  height: 80%;
+  width: 70%;
+  height: 70%;
   margin:0 auto;
+  margin-top:-0.5rem;
   object-fit: contain;
 }
 
 #header .left .title {
   flex: 1;
   text-align: left;
+  margin-top:-0.5rem;
 }
 
 #header .left .title h1 {
-  margin: 0;
-  line-height:2.8rem;
+  margin:0;
+  line-height:3rem;
   font-size: 1.8rem;
   display: inline-block;
   color:#333;
+  letter-spacing:-0.05rem;
+  font-weight:800;
 }
 
 #header .left .title p {
   margin: 0;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   letter-spacing: -0.02rem;
   display: flex;
   align-items: center;
   justify-content: center;
   font-family: 'S-CoreDream-4Regular';
-  color:#666;
+  color:#333;
 }
 
 #header .right button {
