--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -17,77 +17,89 @@
 #header {
   position: relative;
   display: flex;
-  flex-direction: column;
+  align-items: center;
   width: 100%;
-  height:7rem;
-  padding:1.5rem;
+  height: 7.5rem;
+  padding: 0 1.5rem;
   box-sizing: border-box;
 }
 
 #header .left,
 #header .right {
-  position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
-
 #header .left {
-  left:1.5rem;
-  display: flex;
+  justify-content: flex-start;
+  margin-top:-3rem;
 }
 
 #header .right {
-  right:1.5rem;
+  justify-content: flex-end;
+  margin-top:-3rem;
 }
 
-#header .left .ruffys {
-  width: 4rem;
-  height:4.5rem;
-  background: url('../images/h1_say_bg.png') no-repeat 0 0/100%;
-  border-radius: 1rem;
-  flex-shrink: 0;
-  margin-right: 0.8rem;
-  position: relative;
+#header .center {
+  height:5rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top:0.5rem;
+}
+
+#header .center .title {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-#header .left .ruffys img {
+#header .center .title span {
+  width: 3.5rem;
+  height: 3.5rem;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: url('../images/h1_say_bg.png') no-repeat 0 0/100%;
+}
+
+#header .center .title span img {
   width: 70%;
-  height: 70%;
-  margin:0 auto;
-  margin-top:-0.5rem;
-  object-fit: contain;
 }
 
-#header .left .title {
-  flex: 1;
-  text-align: left;
-  margin-top:-0.5rem;
-}
-
-#header .left .title h1 {
-  margin:0;
-  line-height:3rem;
+#header .center .title h1 {
+  line-height: 3rem;
   font-size: 1.8rem;
-  display: inline-block;
-  color:#333;
-  letter-spacing:-0.05rem;
-  font-weight:800;
+  color: #333;
+  letter-spacing: -0.05rem;
+  font-weight: 800;
+  margin: 0;
+  margin-left: 0.5rem;
 }
 
-#header .left .title p {
-  margin: 0;
+
+#header .center p {
+  width:100%;
+  margin-top:0.5rem;
   font-size: 0.9rem;
   letter-spacing: -0.02rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-family: 'S-CoreDream-4Regular';
   color:#333;
+}
+
+#header button.lnb {
+  padding:0;
+  background: url('../images/ico_lnb.png') no-repeat 0 0/100%;
+}
+
+#header button.calendar {
+  background: url('../images/ico_calendar.png') no-repeat 0 0/100%;
 }
 
 #header .right button {
@@ -122,9 +134,10 @@
   gap: 1.5rem;
 }
 
-#footer .button button {
-  width: 1.8rem;
-  height: 1.8rem;
+#footer button,
+#header button  {
+  width: 1.8rem!important;
+  height: 1.8rem!important;
   display: inline-block;
   flex: 0 0 1.8rem;
 }
@@ -160,15 +173,6 @@
     padding-top: 0.5rem;   
     margin-top: -0,5rem;   
   }
-}
-
-button.lnb {
-  padding:0;
-  background: url('../images/ico_lnb.png') no-repeat 0 0/100%;
-}
-
-button.calendar {
-  background: url('../images/ico_calendar.png') no-repeat 0 0/100%;
 }
 
 button.add {
