--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -163,6 +163,7 @@
 }
 
 #main_body .routine_total .total_area .term {
+  width:4rem;
   background-color:red;
 }
 
@@ -174,7 +175,7 @@
   font-weight:900;
   background-color:#fff;
   border-radius: 0.5rem;
-  width:4rem;
+  width:100%;
   text-align:center;
   margin-bottom:0.3rem;
 }
