--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -164,7 +164,7 @@
 
 #main_body .routine_total .total_area .term {
   width:4rem;
-  background-color:red;
+  padding-left:0.5rem;
 }
 
 #main_body .routine_total .total_area .term button {
