--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -181,6 +181,13 @@
   }
 }
 
+.date.is-hidden{
+  opacity: 0;
+  pointer-events: none;
+  visibility: visible;
+  height: auto;
+}
+
 button.add {
   width: 3rem;
   height: 3rem;
