--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -107,8 +107,9 @@
 
 #main_body .routine_total {
   border-radius:1.5rem;
-  padding:1rem 0.5rem 1rem 0.5rem;
-  background-color:#fff
+  padding:1rem 0.5rem 0rem 0rem;
+  background-color:#fff;
+  margin-bottom:1rem;
 }
 
 #main_body .routine_total .total_area {
