--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -107,7 +107,7 @@
 
 #main_body .routine_total {
   border-radius:1.5rem;
-  padding:1rem 0.5rem 0rem 0rem;
+  padding:0.5rem;
   background-color:#fff;
   margin-bottom:1rem;
 }
