--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -107,14 +107,13 @@
 
 #main_body .routine_total {
   border-radius:1.5rem;
-  padding:0.5rem 0.5rem 0 0;
+  padding:0.5rem 0.5rem 0.5rem 0;
   background-color:#fff;
   margin-bottom:1rem;
 }
 
 #main_body .routine_total .total_area {
   height:6rem;
-  margin-bottom:1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
