--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -85,6 +85,7 @@ body,
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f9f9f9;
+  text-align:center;
 }
 
 @media (max-width: 375px) {
