--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   position: relative;
   overflow-x: hidden;
-  padding:0 1.5rem 0 1.5rem 0;
+  padding:1.5rem;
 }
 
 [v-cloak] {
