--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   position: relative;
   overflow-x: hidden;
-  padding:1.5rem;
+  padding:0 1.5rem 0 1.5rem 0;
 } 
 
 [v-cloak] {
@@ -153,7 +153,6 @@
   flex-direction: column;
   min-height: 0;
   -webkit-overflow-scrolling: touch;
-  padding: 0.5rem 1.5rem;
   padding-bottom: calc(1.5rem + 3rem + var(--sab));
 }
 
