--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,20 +1,3 @@
-#main_wrap {
-  height: calc(var(--vh, 1vh) * 100);
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  overflow-x: hidden;
-  padding:0 1.5rem 0 1.5rem 0;
-} 
-
-[v-cloak] {
-  display: none;
-}
-
-#main_wrap button {
-  display: inline-block;
-}
-
 #header {
   position: relative;
   display: flex;
@@ -140,6 +123,23 @@
   height: 1.8rem !important;
   display: inline-block;
   flex: 0 0 1.8rem;
+}
+
+#main_wrap {
+  height: calc(var(--vh, 1vh) * 100);
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  overflow-x: hidden;
+  padding:0 1.5rem 0 1.5rem;
+} 
+
+[v-cloak] {
+  display: none;
+}
+
+#main_wrap button {
+  display: inline-block;
 }
 
 #main_wrap,
