--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -86,6 +86,7 @@ body,
   -moz-osx-font-smoothing: grayscale;
   background-color: #f9f9f9;
   text-align:center;
+  overflow:hidden;
 }
 
 @media (max-width: 375px) {
