--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -168,7 +168,11 @@ will-change: transform;
 padding-bottom: 5rem;
 overflow-anchor: none;
 }
-
+.main_scroll::after {
+content: ‘’;
+display: block;
+height: 2px;
+}
 button.add {
   width: 3rem;
   height: 3rem;
