--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -159,20 +159,15 @@
 
 .main_scroll {
   flex: 1;
-overflow-y: auto;
--webkit-overflow-scrolling: touch;
-touch-action: pan-y !important;
-min-height: calc(100% + 1px);
-transform: translateZ(0);
-will-change: transform;
-padding-bottom: 5rem;
-overflow-anchor: none;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  touch-action: pan-y !important;
+  min-height: 0;
+  transform: translateZ(0);
+  will-change: transform;
+  padding-bottom:5rem;
 }
-.main_scroll::after {
-content: ‘’;
-display: block;
-height: 2px;
-}
+
 button.add {
   width: 3rem;
   height: 3rem;
